--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = 'pdx'
-version = '0.7.0'
+name = 'pdx2'
+version = '0.8.0'
 description = 'Helper functions to run SQL on Pandas DataFrames'
 authors = [
     {name = 'AJ Friend', email='ajfriend@gmail.com'},
@@ -15,7 +15,7 @@ dependencies = [
 ]
 
 [project.urls]
-homepage = 'https://github.com/ajfriend/pdx'
+homepage = 'https://github.com/ajfriend/pdx2'
 
 [project.optional-dependencies]
 dev = [
