--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 homepage = 'https://github.com/ajfriend/pdx2'
 
 [project.optional-dependencies]
-dev = [
+tests = [
     'pytest >= 7.0'
 ]
 
