--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ authors = [
     {name = 'AJ Friend', email='ajfriend@gmail.com'},
 ]
 readme = 'readme.md'
-requires-python = '>=3.6'
+requires-python = '>=3.9'
+license = { file = 'LICENSE' }
+keywords = ['data-wrangling', 'duckdb', 'SQL', 'ETL', 'pipelines']
 
 dependencies = [
     'pandas >= 2.0',
