--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,6 @@ addopts = "--cov=pdx2 --cov=tests --cov-report=term-missing --cov-fail-under=92"
 [build-system]
 requires = ['hatchling']
 build-backend = 'hatchling.build'
+
+[tool.hatch.build.targets.sdist]
+include = ['src/']
