--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ dependencies = [
 
 [project.urls]
 homepage = 'https://github.com/ajfriend/pdx2'
+repository = 'https://github.com/ajfriend/pdx2'
+documentation = 'https://github.com/ajfriend/pdx2'
+pypi = 'https://pypi.org/project/pdx2'
+
 
 [project.optional-dependencies]
 test = ['pytest', 'pytest-cov', 'ruff']
